[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/ammo.png" type="Texture" id=1]
[ext_resource path="res://ttf/Augusta One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/heartcolored.png" type="Texture" id=3]
[ext_resource path="res://sprites/zombi1.png" type="Texture" id=4]
[ext_resource path="res://Stats.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 600
font_data = ExtResource( 2 )

[node name="Stats" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.2, 0.2 )
transform = Transform2D( 0.2, 0, 0, 0.2, 0, 0 )

[node name="Label_ammo" type="Label" parent="CanvasLayer"]
margin_left = 4958.21
margin_top = 44.8932
margin_right = 5174.21
margin_bottom = 181.893
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.835294, 0.054902, 0.054902, 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 1180.11
margin_top = 1206.57
margin_right = 4469.11
margin_bottom = 1908.57
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.054902, 0.054902, 1 )
text = "Game over"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_zombi" type="Label" parent="CanvasLayer"]
margin_left = 4954.24
margin_top = 255.224
margin_right = 5170.24
margin_bottom = 392.224
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.835294, 0.054902, 0.054902, 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 4826.96, 124.829 )
texture = ExtResource( 1 )

[node name="zombi1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 4810.07, 313.528 )
scale = Vector2( 1.47428, 1.30724 )
texture = ExtResource( 4 )

[node name="heartcolored" type="Sprite" parent="CanvasLayer"]
position = Vector2( 654.057, 272.042 )
scale = Vector2( 1.08392, 0.989934 )
texture = ExtResource( 3 )
offset = Vector2( -406.74, -67.1424 )

[node name="heartcolored2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 855.872, 272.042 )
scale = Vector2( 1.08392, 0.989934 )
texture = ExtResource( 3 )
offset = Vector2( -406.74, -67.1424 )

[node name="heartcolored3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1057.69, 280.451 )
scale = Vector2( 1.08392, 0.989934 )
texture = ExtResource( 3 )
offset = Vector2( -406.74, -67.1424 )
